hphp/hack/test/typecheck/references/refs_in_array/binding_new_element1.php.exp
File "binding_new_element1.php", line 6, characters 10-11:
References are only allowed as function call arguments (Parsing[1002])
